--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://localhost:3306/ponto-inteligente
 spring.datasource.username=root
-spring.datasource.password=""
+spring.datasource.password=root
 
 #exibe comando SQL
 spring.jpa.properties.hibernate.show_sql=true
