--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #MySQL
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://localhost:3306/ponto-inteligente
+spring.datasource.url=jdbc:mysql://localhost:3306/ponto-inteligente?useTimezone=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
